load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "depo.go",
        "forwarding.go",
        "hive.go",
        "messages.go",
        "protocol.go",
        "syncdb.go",
        "syncer.go",
    ],
    importpath = "github.com/ethereum/go-ethereum/swarm/network",
    visibility = ["//visibility:public"],
    deps = [
        "//common:go_default_library",
        "//contracts/chequebook:go_default_library",
        "//log:go_default_library",
        "//metrics:go_default_library",
        "//p2p:go_default_library",
        "//p2p/discover:go_default_library",
        "//p2p/netutil:go_default_library",
        "//swarm/network/kademlia:go_default_library",
        "//swarm/services/swap:go_default_library",
        "//swarm/services/swap/swap:go_default_library",
        "//swarm/storage:go_default_library",
        "//vendor/github.com/syndtr/goleveldb/leveldb:go_default_library",
        "//vendor/github.com/syndtr/goleveldb/leveldb/iterator:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "protocol_test.go",
        "syncdb_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//crypto:go_default_library",
        "//log:go_default_library",
        "//swarm/storage:go_default_library",
    ],
)
