load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "address.go",
        "kaddb.go",
        "kademlia.go",
    ],
    importpath = "github.com/ethereum/go-ethereum/swarm/network/kademlia",
    visibility = ["//visibility:public"],
    deps = [
        "//common:go_default_library",
        "//log:go_default_library",
        "//metrics:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "address_test.go",
        "kademlia_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["//common:go_default_library"],
)
